--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@playwright/test": "^1.44.1",
     "chalk": "^5.3.0",
     "eslint": "^7.32.0",
-    "eslint-config-vercel-ai": "workspace:*",
+    "eslint-config-vercel-ai": "^1.0.0",
     "husky": "^8.0.0",
     "lint-staged": "^15.2.4",
     "next": "15.0.0-canary.23",
