--- a/package.json
+++ b/package.json
@@ -26,15 +26,14 @@
     "@playwright/test": "^1.44.1",
     "chalk": "^5.3.0",
     "eslint": "^7.32.0",
-    "eslint-config-vercel-ai": "^1.0.0",
     "husky": "^8.0.0",
     "lint-staged": "^15.2.4",
     "next": "15.0.0-canary.23",
     "playwright": "^1.44.1",
     "prettier": "2.8.8",
     "publint": "0.1.11",
-    "react": "19.0.0-rc-cc1ec60d0d-20240607",
-    "react-dom": "19.0.0-rc-cc1ec60d0d-20240607",
+    "react": "^19.0.0-rc.0",
+    "react-dom": "^19.0.0-rc.0",
     "turbo": "^1.10.13",
     "vitest": "1.6.0"
   },
